fix punctuation and URLs in en/books and en/articles
Differential Revision: https://reviews.freebsd.org/D53087

--- a/documentation/content/en/books/arch-handbook/boot/_index.adoc
+++ b/documentation/content/en/books/arch-handbook/boot/_index.adoc
@@ -258,7 +258,7 @@ start:
 .[.filename]#stand/i386/boot0/boot0.S# [[boot-boot0-entrypoint]]
 This first block of code is the entry point of the program.
 It is where the BIOS transfers control.
-First, it makes sure that the string operations autoincrement its pointer operands (the `cld` instruction) footnote:[When in doubt, we refer the reader to the official Intel manuals, which describe the exact semantics for each instruction: .].
+First, it makes sure that the string operations autoincrement its pointer operands (the `cld` instruction) footnote:[When in doubt, we refer the reader to the official Intel manuals, which describe the exact semantics for each instruction.].
 Then, as it makes no assumption about the state of the segment registers, it initializes them.
 Finally, it sets the stack pointer register (`%sp`) to ($LOAD = address `0x7c00`), so we have a working stack.
 
@@ -719,8 +719,8 @@ The code after the call to `nread` locates the beginning of [.filename]#boot2# i
 This is because the BTX server arranges [.filename]#boot2# to execute in a segment starting at `0xa000`.
 We explore this in detail in the following section.
 
-The last code block of [.filename]#boot1# enables access to memory above 1MB footnote:[This is necessary for legacy reasons.
-Interested readers should see .] and concludes with a jump to the starting point of the BTX server:
+The last code block of [.filename]#boot1# enables access to memory above 1MB footnote:[This is necessary for legacy reasons.]
+and concludes with a jump to the starting point of the BTX server:
 
 [.programlisting]
 ....
