--- a/documentation/content/ru/books/arch-handbook/_index.adoc
+++ b/documentation/content/ru/books/arch-handbook/_index.adoc
@@ -1,27 +1,32 @@
 ---
-add_split_page_link: true
+add_single_page_link: true
 authors:
   - 
     author: 'The FreeBSD Documentation Project'
+bookOrder: 50
 copyright: '2000-2006, 2012-2023 The FreeBSD Documentation Project'
 description: 'Для разработчиков систем FreeBSD. В этой книге рассматриваются архитектурные особенности многих важных подсистем ядра FreeBSD'
+next: books/arch-handbook/parti
+params:
+  path: /books/arch-handbook/
+showBookMenu: true
 tags: ["Arch Handbook", "FreeBSD"]
 title: 'Руководство по архитектуре FreeBSD'
 trademarks: ["freebsd", "apple", "microsoft", "unix", "general"]
+weight: 0
 ---
 
 = Руководство по архитектуре FreeBSD
 :doctype: book
 :toc: macro
-:toclevels: 2
+:toclevels: 1
 :icons: font
 :sectnums:
 :sectnumlevels: 6
 :partnums:
 :source-highlighter: rouge
 :experimental:
-:book: true
-:pdf: false
+:images-path: books/arch-handbook/
 
 ifdef::env-beastie[]
 ifdef::backend-html5[]
@@ -32,16 +37,13 @@ include::shared/attributes/attributes-{{% lang %}}.adoc[]
 include::shared/{{% lang %}}/teams.adoc[]
 include::shared/{{% lang %}}/mailing-lists.adoc[]
 include::shared/{{% lang %}}/urls.adoc[]
-:chapters-path: content/{{% lang %}}/books/arch-handbook/
 endif::[]
 ifdef::backend-pdf,backend-epub3[]
-:chapters-path:
 include::../../../../../shared/asciidoctor.adoc[]
 endif::[]
 endif::[]
 
 ifndef::env-beastie[]
-:chapters-path:
 include::../../../../../shared/asciidoctor.adoc[]
 endif::[]
 
@@ -53,31 +55,3 @@ endif::[]
 Актуальная версия этого документа всегда доступна на https://www.FreeBSD.org/[официальном веб-сервере FreeBSD]. Его также можно загрузить в различных форматах и с разными вариантами сжатия с https://download.freebsd.org/doc/[сервера загрузок FreeBSD] или одного из многочисленных зеркал extref:{handbook}mirrors/[mirror sites, mirrors].
 
 '''
-
-toc::[]
-
-// Section one
-include::{chapters-path}parti.adoc[]
-include::{chapters-path}boot/_index.adoc[leveloffset=+1]
-include::{chapters-path}locking/_index.adoc[leveloffset=+1]
-include::{chapters-path}kobj/_index.adoc[leveloffset=+1]
-include::{chapters-path}jail/_index.adoc[leveloffset=+1]
-include::{chapters-path}sysinit/_index.adoc[leveloffset=+1]]
-include::{chapters-path}mac/_index.adoc[leveloffset=+1]
-include::{chapters-path}vm/_index.adoc[leveloffset=+1]
-include::{chapters-path}smp/_index.adoc[leveloffset=+1]
-
-// Section two
-include::{chapters-path}partii.adoc[]
-include::{chapters-path}driverbasics/_index.adoc[leveloffset=+1]
-include::{chapters-path}isa/_index.adoc[leveloffset=+1]
-include::{chapters-path}pci/_index.adoc[leveloffset=+1]
-include::{chapters-path}scsi/_index.adoc[leveloffset=+1]
-include::{chapters-path}usb/_index.adoc[leveloffset=+1]
-include::{chapters-path}newbus/_index.adoc[leveloffset=+1]
-include::{chapters-path}sound/_index.adoc[leveloffset=+1]
-include::{chapters-path}pccard/_index.adoc[leveloffset=+1]
-
-// Section three
-include::{chapters-path}partiii.adoc[]
-include::{chapters-path}bibliography/_index.adoc[leveloffset=+1]
