--- a/website/content/en/releases/14.4R/readme.adoc
+++ b/website/content/en/releases/14.4R/readme.adoc
@@ -1,11 +1,11 @@
 ---
-title: "FreeBSD X.0-RELEASE README"
+title: "FreeBSD 14.4-RELEASE README"
 sidenav: download
 ---
 
-:releaseCurrent: X.0-RELEASE
+:releaseCurrent: 14.4-RELEASE
 :releaseType: release
-:releaseBranch: X-STABLE
+:releaseBranch: 14-STABLE
 :releasePrevStable: X.Y-RELEASE
 :releasePrev: X.Y-RELEASE
 
