--- a/website/content/en/releases/14.4R/schedule.adoc
+++ b/website/content/en/releases/14.4R/schedule.adoc
@@ -1,14 +1,14 @@
 ---
-title: "FreeBSD X.0 Release Process"
+title: "FreeBSD 14.4 Release Process"
 sidenav: download
 ---
 
 = FreeBSD {localRel} Release Process
-:localRelPrev: X.Y-1
-:localRel: X.0
+:localRelPrev: 14.3
+:localRel: 14.4
 :localBranchHead: head
-:localBranchStable: stable/X
-:localBranchReleng: releng/X.0
+:localBranchStable: stable/14
+:localBranchReleng: releng/14.4
 :localMailingList: current
 
 include::shared/en/urls.adoc[]
