--- a/website/content/en/releases/14.4R/_index.adoc
+++ b/website/content/en/releases/14.4R/_index.adoc
@@ -1,11 +1,11 @@
 ---
-title: "FreeBSD X.0 Release Information"
+title: "FreeBSD 14.4 Release Information"
 sidenav: download
 ---
 
-:localRel: X.0
-:localBranchStable: stable/X
-:localBranchReleng: releng/X.0
+:localRel: 14.4
+:localBranchStable: stable/14
+:localBranchReleng: releng/14.4
 
 = FreeBSD {localRel} Release Information
 
