--- a/website/content/en/releases/14.4R/installation.adoc
+++ b/website/content/en/releases/14.4R/installation.adoc
@@ -1,12 +1,12 @@
 ---
-title: "FreeBSD X.0-RELEASE Installation Instructions"
+title: "FreeBSD 14.4-RELEASE Installation Instructions"
 sidenav: download
 ---
 
-:releaseCurrent: X.0-RELEASE
-:releasePrev: X.-1-RELEASE
-:releasePrevLegacy: X-1.Y-RELEASE
-:localRel: X.0
+:releaseCurrent: 14.4-RELEASE
+:releasePrev: 14.3-RELEASE
+:releasePrevLegacy: 13.5-RELEASE
+:localRel: 14.4
 
 include::shared/en/urls.adoc[]
 
