--- a/website/content/en/releases/14.4R/relnotes.adoc
+++ b/website/content/en/releases/14.4R/relnotes.adoc
@@ -1,11 +1,11 @@
 ---
-title: "FreeBSD X.0-RELEASE Release Notes"
+title: "FreeBSD 14.4-RELEASE Release Notes"
 sidenav: download
 ---
 
-:localRel: X.0
-:releaseCurrent: X.0-RELEASE
-:releaseBranch: X-STABLE
+:localRel: 14.4
+:releaseCurrent: 14.4-RELEASE
+:releaseBranch: 14-STABLE
 :releasePrev: X.Y-RELEASE
 :releaseNext: X.Y-RELEASE
 :releaseType: "release"
