--- a/website/content/en/security/unsupported.adoc
+++ b/website/content/en/security/unsupported.adoc
@@ -65,4 +65,5 @@ The following releases are no longer supported but are listed here for reference
 |releng/13.4 |13.4-RELEASE |n/a |September 17, 2024 | June 30, 2025
 |releng/14.0 |14.0-RELEASE |n/a |November 20, 2023|September 30, 2024
 |releng/14.1 |14.1-RELEASE |n/a |June 4, 2024|March 31, 2025
+|releng/14.2 |14.2-RELEASE |n/a |December 3, 2024 |September 30, 2025
 |===
