--- a/website/content/en/releng/_index.adoc
+++ b/website/content/en/releng/_index.adoc
@@ -33,7 +33,7 @@ General information about committing to -STABLE.
 |===
 |Date |Event |Information
 |December 2025 |FreeBSD 15.0 |link:../releases/15.0R/schedule/[Target Schedule]
-|March 2026 |FreeBSD 14.4 |
+|March 2026 |FreeBSD 14.4 |link:../releases/14.4R/schedule/[Target Schedule]
 |June 2026 |FreeBSD 15.1 |
 |September 2026 |FreeBSD 14.5 |
 |December 2026 |FreeBSD 15.2 |
