status/valgrind: spell

--- a/website/content/en/status/report-2025-07-2025-09/valgrind.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/valgrind.adoc
@@ -7,9 +7,9 @@ link:https://github.com/paulfloyd/freebsdarm64_valgrind[arm64 port] URL: link:ht
 
 Contact: Paul Floyd <pjfloyd@wanadoo.fr>
 
-I have not submitted any reports for over a year. On the whole that is good news as it means that there have not been any major issues. Back then I said that aarch64 support was about to land and indeed it dit in mid April 2024.
+I have not submitted any reports for over a year. On the whole that is good news as it means that there have not been any major issues. Back then I said that aarch64 support was about to land and indeed it did in mid April 2024.
 
-I added a nice little script for use with Valgrind called `vgscript`. This works in a similar manner to `pstack` (or `bstack` on FreeBSD) in that you give it a PID and it will generate a stack trace for that process. If you use `bstack` with a Valgrind process you will see the Valgrind call stack which is probabably of no use to you. If you run `vgstack` with a Valgrind PID it will print the call stack of the test exe running under Valgrind.
+I added a nice little script for use with Valgrind called `vgscript`. This works in a similar manner to `pstack` (or `bstack` on FreeBSD) in that you give it a PID and it will generate a stack trace for that process. If you use `bstack` with a Valgrind process you will see the Valgrind call stack which is probably of no use to you. If you run `vgstack` with a Valgrind PID it will print the call stack of the test exe running under Valgrind.
 
 If you use Valgrind regularly could you take a look and answer the survey that I posted on the forums (if you have not done so already).
 Here is the link:https://forums.freebsd.org/threads/valgrind-feature-poll.98707/#post-716085[link].
@@ -18,7 +18,7 @@ Valgrind 3.26 is due out at the end of October 2025 and package:devel/valgrind[]
 
 package:devel/valgrind-devel[] will get one (or maybe more) updates as I fix issues with FreeBSD 15.0.
 
-The oustanding issues that I have on FreeBSD 15.0 are
+The outstanding issues that I have on FreeBSD 15.0 are
 * aarch64: there is a problem when using Valgrind with gdb/vgdb. Hitting ctrl-c to interrupt the process running under Valgrind does not work and Valgrind crashes with an assert.
 * aarch64: a known old issue that was infrequent regarding initialisation of thread memory now seems to occur much more often.
 * amd64: maybe similar to the first issue with gdb/vgdb and interrupting a process, but this time I'm seeing `select` return an 'impossible' value.
