Use canonical names for Linux filesystems
The manpages of linprocfs(5) and linsysfs(5) document canonical names, use
these in the handbook.

PR:		283079
Reviewed by:	emaste, markj
Differential Revision:	https://reviews.freebsd.org/D53141

--- a/documentation/content/hu/books/handbook/desktop/_index.adoc
+++ b/documentation/content/hu/books/handbook/desktop/_index.adoc
@@ -223,14 +223,14 @@ Ha Flash(TM) animációkat szeretnénk lejátszani, akkor ehhez a [.filename]#/u
 
 [source,shell]
 ....
-# mount -t linprocfs linproc /usr/compat/linux/proc
+# mount -t linprocfs linprocfs /usr/compat/linux/proc
 ....
 
 Az [.filename]#/etc/fstab# állományban az alábbi sor hozzáadásával azonban ennek csatlakoztatása akár automatikussá is tehetõ a rendszerindítás során:
 
 [.programlisting]
 ....
-linproc  /usr/compat/linux/proc  linprocfs      rw       0       0
+linprocfs  /usr/compat/linux/proc  linprocfs      rw       0       0
 ....
 
 Ezután indítsuk el a böngészõt, majd gépeljük be az `about:plugins` szöveget a címsorba és nyomjuk le az kbd:[Enter] billentyût. Ekkor a jelenleg elérhetõ pluginok listájának kell megjelennie.
