--- a/shared/releases.adoc
+++ b/shared/releases.adoc
@@ -37,7 +37,7 @@
 
 // Set to 'INCLUDE' when the schedule is available.
 
-:beta-upcoming: INCLUDE
+:beta-upcoming: IGNORE
 
 // Set to 'INCLUDE' when the installation images are available.
 
@@ -56,7 +56,7 @@
 
 // Set to 'INCLUDE' when the installation images are available.
 
-:beta2-testing: IGNORE
+:beta2-testing: INCLUDE
 :betarel2-current: 15.0
 :betarel2-vers: RELEASE
 :u-betarel2-schedule: https://www.FreeBSD.org/releases/{betarel2-current}R/schedule/
@@ -82,6 +82,18 @@
 // fully complete yet.  I plan to followup on this and expand it
 // more (in addition to cleaning up this file) following the 11.3
 // release (likely as part of the 11.3 announcement commit). -gjb
+
+:rel150-current-major: 15
+:rel150-current: 15.0
+:rel150-current-date: December 2, 2025
+
+:u-rel150-notes: https://www.FreeBSD.org/releases/{rel150-current}R/relnotes/
+:u-rel150-announce: https://www.FreeBSD.org/releases/{rel150-current}R/announce/
+:u-rel150-errata: https://www.FreeBSD.org/releases/{rel150-current}R/errata/
+:u-rel150-hardware: https://www.FreeBSD.org/releases/{rel150-current}R/hardware/
+:u-rel150-installation: https://www.FreeBSD.org/releases/{rel150-current}R/installation/
+:u-rel150-readme: https://www.FreeBSD.org/releases/{rel150-current}R/readme/
+:u-rel150-signatures: https://www.FreeBSD.org/releases/{rel150-current}R/signatures/
 
 :rel143-current-major: 14
 :rel143-current: 14.3
