new-committers: add mailmap advice
Since we've started bringing in people via github, etc, they have a
number of commits with a different author than the FreeBSD
address. Suggest that people add their new FreeBSD address.

Suggested by: srcmgr call
Sponsored by: Netflix

--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -2199,6 +2199,12 @@ It is very important to have a current PGP/GnuPG key in the repository. The key 
 [.filename]#src/share/misc/committers-<repository>.dot# - Add an entry to the current committers section, where _repository_ is `doc`, `ports`, or `src`, depending on the commit privileges granted.
 +
 Add an entry for each additional mentor/mentee relationship in the bottom section.
+. Update git mailmap file
++
+[.filename]#src/.mailmap#, [.filename]#doc/.mailmap#, and [.filename]#ports/.mailmap# - Add an entry for commits you created prior to becoming a FreeBSD committer.
++
+Mapping to your FreeBSD address allows us to track external committers who may be ready for a commit bit more easily.
+You can also use this to correct old names, mispelled names, etc in the default `git log` output.
 . Generate a Kerberos Password
 +
 See crossref:committers-guide[kerberos-ldap, Kerberos and LDAP web Password for FreeBSD Cluster] to generate or set a Kerberos account for use with other FreeBSD services like the link:https://bugs.freebsd.org/bugzilla/[bug-tracking database] (you get a bug-tracking account as part of that step).
