Update download page post-stable/15 branch
The main branch is now 16.0-CURRENT; and we now have a 15.0-STABLE
branch.

We don't have 15.0-STABLE downloads quite yet but they should arrive
in the next week; I'd rather have some temporary 404s than forget to
add the 15.0-STABLE section later.

Sponsored by:	https://www.patreon.com/cperciva

--- a/shared/releases.adoc
+++ b/shared/releases.adoc
@@ -28,7 +28,7 @@
 :beta2-local-where: IGNORE
 :beta3-local-where: IGNORE
 
-:rel-head-major: 15
+:rel-head-major: 16
 :rel-head: {rel-head-major}.0
 
 // If there is no release currently in the release cycle (i.e. we
@@ -84,7 +84,7 @@
 // release (likely as part of the 11.3 announcement commit). -gjb
 
 //:rel150-current-major: 15
-//:rel150-current: 15.0
+:rel150-current: 15.0
 //:rel150-current-date: December 2, 2025
 //
 //:u-rel150-notes: https://www.FreeBSD.org/releases/{rel150-current}R/relnotes/
