--- a/website/content/en/where.adoc
+++ b/website/content/en/where.adoc
@@ -173,11 +173,17 @@ The word `CURRENT` is sometimes a source of confusion:
 
 See link:../snapshots/[FreeBSD Snapshot Releases].
 
-=== FreeBSD {rel-head}-ALPHA
+=== FreeBSD {rel-head}-CURRENT
 
 Installer and SD card images are available for link:{url-snapshot}/amd64/amd64/ISO-IMAGES/{rel-head}/[amd64], link:{url-snapshot}/powerpc/powerpc64/ISO-IMAGES/{rel-head}/[powerpc64], link:{url-snapshot}/powerpc/powerpc64le/ISO-IMAGES/{rel-head}/[powerpc64le], link:{url-snapshot}/arm/armv7/ISO-IMAGES/{rel-head}/[armv7], link:{url-snapshot}/arm64/aarch64/ISO-IMAGES/{rel-head}/[aarch64], and link:{url-snapshot}/riscv/riscv64/ISO-IMAGES/{rel-head}/[riscv64].
 
 VM images are available for link:{url-snapshot}/VM-IMAGES/{rel-head}-CURRENT/amd64/Latest/[amd64], link:{url-snapshot}/VM-IMAGES/{rel-head}-CURRENT/aarch64/Latest/[aarch64], and link:{url-snapshot}/VM-IMAGES/{rel-head}-CURRENT/riscv64/Latest/[riscv64].
+
+=== FreeBSD {rel150-current}-STABLE
+
+Installer and SD card images are available for link:{url-snapshot}/amd64/amd64/ISO-IMAGES/{rel150-current}/[amd64], link:{url-snapshot}/powerpc/powerpc64/ISO-IMAGES/{rel150-current}/[powerpc64], link:{url-snapshot}/powerpc/powerpc64le/ISO-IMAGES/{rel150-current}/[powerpc64le], link:{url-snapshot}/arm/armv7/ISO-IMAGES/{rel150-current}/[armv7], link:{url-snapshot}/arm64/aarch64/ISO-IMAGES/{rel150-current}/[aarch64], and link:{url-snapshot}/riscv/riscv64/ISO-IMAGES/{rel150-current}/[riscv64].
+
+VM images are available for link:{url-snapshot}/VM-IMAGES/{rel150-current}-STABLE/amd64/Latest/[amd64], link:{url-snapshot}/VM-IMAGES/{rel150-current}-STABLE/aarch64/Latest/[aarch64], and link:{url-snapshot}/VM-IMAGES/{rel150-current}-STABLE/riscv64/Latest/[riscv64].
 
 === FreeBSD {rel143-current}-STABLE
 
