Update to the latest EN revision (df9b18f881690c6d5864621fd01c189810faed7d) Fix some web links
Reviewed by:	vladlen, maxim (mentor)
Differential Revision:	https://reviews.freebsd.org/D53189

--- a/website/content/ru/about.adoc
+++ b/website/content/ru/about.adoc
@@ -5,41 +5,47 @@ sidenav: about
 
 include::shared/ru/urls.adoc[]
 
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (27.11.2023): df9b18f881690c6d5864621fd01c189810faed7d
+//
+
 = О FreeBSD
 
 == Что такое FreeBSD?
 
-FreeBSD - это современная операционная система для компьютеров на архитектуре x86 (в том числе Pentium(R) и Athlon(TM)), amd64 (включая Opteron(TM), Athlon(TM)64 и EM64T), ARM, IA-64, PowerPC, PC-98 и UltraSPARC(R). Она основана на BSD, версии UNIX(R), созданной в Калифорнийском Университете в Беркли. Она разрабатывается и поддерживается link:{contributors}#staff-committers[большой командой разработчиков]. Поддержка link:../platforms/[других платформ] находится на разных стадиях разработки.
+FreeBSD - это операционная система для link:../platforms[различных платформ], ориентированная на функциональность, скорость и стабильность работы.  Она основана на BSD, версии UNIX(R), созданной в Калифорнийском Университете в Беркли. Разработкой и поддержкой системы занимается link:{contributors}#staff-committers[большое сообщество].
 
-== Самые современные технологии
+== Самые передовые технологии
 
-Исключительный набор сетевых функций, высокая производительность, средства обеспечения информационной безопасности и совместимости с другими ОС - вот те современные link:../features/[возможности] FreeBSD, которые зачастую всё ещё отсутствуют в других, даже лучших коммерческих, операционных системах.
+На сегодняшний день FreeBSD обеспечивает современный набор link:../features[возможностей], в том числе передовые сетевые технологии, высокую производительность, средства обеспечения информационной безопасности и совместимости, которые всё ещё отсутствуют в других операционных системах, даже в некоторых самых лучших коммерческих версиях.
 
-== Мощное решение для Internet
+== Мощные решения для Internet
 
-FreeBSD является идеальной платформой для построения link:../internet/[Internet или Intranet] сервера. Эта система предоставляет надёжные даже при самой интенсивной нагрузке сетевые службы, и эффективное управление памятью, что позволяет обеспечивать приемлемое время отклика для тысяч одновременно работающих пользовательских задач.
+FreeBSD является идеальной платформой для построения сервера в сети Интернет или внутренней сети предприятия.  Она обеспечивает сетевые сервисы, надёжно работающие даже при самой высокой нагрузке, и эффективное управление памятью, что позволяет обеспечивать хорошее время реакции для тысяч одновременно работающих пользовательских процессов.
 
-== Продвинутые встраиваемые платформы
+== Передовые встраиваемые платформы
 
-FreeBSD предоставляет продвинутые возможности сетевой операционной системы для устройств и встраиваемых платформ, от hi-end устройств на основе Intel до аппаратных платформ Arm, PowerPC и, вскоре, MIPS. От почтовых и веб-устройств до маршрутизаторов, серверов времени и беспроводных точек доступа производители по всему миру полагаются на встроенное окружение сборки и кросс-сборки и продвинутые возможности FreeBSD в качестве основы для своих встраиваемых продуктов. А лицензия открытого исходного кода Беркли позволяет им решать, как много из своих локальных изменений они хотели бы внести обратно.
+FreeBSD обеспечивает продвинутые сетевые возможности на уровне операционной системы для специализированных устройств и встраиваемых платформ, от устройств высшего класса на основе Intel до аппаратных платформ на базе ARM, PowerPC и MIPS. От специализированных устройств для обслуживания электронной почты и веб-сервисов до маршрутизаторов, серверов синхронизации времени и беспроводных точек доступа, производители по всему миру полагаются на интегрированные во FreeBSD средства разработки (в том числе кросс-платформенной), а также её продвинутые возможности, в качестве основы для своих встраиваемых продуктов.  Лицензия открытого исходного кода Беркли позволяет им самим определять, какими именно из собственных изменений они хотели бы поделиться.
 
-== Огромное количество приложений
+== Поддержка огромного количества приложений
 
-С более чем 20 000 портированных библиотек и link:../applications/[приложений], FreeBSD поддерживает приложения для десктопов, серверов, устройств и встраиваемых окружений.
+FreeBSD обеспечивает работу более чем 30 000 портированных библиотек и link:../applications/[приложений], предназначенных как для настольных компьютеров, так и серверов, специализированных и встраиваемых устройств.
 
 == Простота установки
 
-FreeBSD может быть установлена с различных носителей, включая CD-ROM, DVD, либо непосредственно через сеть, используя FTP или NFS. Всё, что вам нужно - link:{handbook}#install[эти указания].
+FreeBSD может быть установлена с различных носителей, в том числе CD-ROM и DVD, или непосредственно из сети, используя FTP или NFS. Всё, что вам нужно - link:{handbook}bsdinstall[эти указания].
 
 == FreeBSD распространяется _свободно_
 
 [.right ]
-link:../copyright/daemon/[image:../../gifs/dae_up3.gif[Даемон BSD,width=72,height=81]]
+image:../../gifs/dae_up3.gif[Даемон BSD,width=72,height=81]
 
-Хотя вы можете подумать, что операционная система с такими возможностями продаётся по высокой цене, FreeBSD распространяется link:../copyright/[бесплатно] и поставляется со всеми исходными текстами. Если вам захочется купить или загрузить её копию, обратитесь к link:{handbook}#mirrors[следующей информации].
+Хотя вы можете ожидать, что операционная система с такими возможностями продаётся по высокой цене, FreeBSD распространяется link:../copyright/[бесплатно] и поставляется с исходным кодом. На случай, если вам захочется купить или загрузить её копию для апробации, link:{handbook}mirrors[имеется дополнительная информация].
 
-== Как принять участие в проекте
+== Как принять участие в проекте FreeBSD
 
-Принять участие в проекте очень просто. Всё, что вам нужно сделать - это найти часть FreeBSD, которую, по вашему мнению, можно усовершенствовать, сделать (внимательно и аккуратно) соответствующие изменения и отправить их в адрес Проекта либо с помощью утилиты send-pr, либо непосредственно коммиттеру, если вы его знаете. Эта работа может представлять собой что угодно, от документации до исходных текстов. Подробнее об этом можно прочитать link:{contributing}[здесь.]
+Принять участие в проекте очень просто.  Всё, что вам нужно сделать - это найти ту часть FreeBSD, которую, по вашему мнению, можно улучшить, выполнить (внимательно и аккуратно) соответствующие изменения и отправить их либо в адрес Проекта с помощью утилиты send-pr, либо какому-нибудь коммиттеру, если вы знаете кого-то из них.  Эта работа может представлять собой что угодно, от документации и графики до исходных текстов.  Обратитесь к статье об link:{contributing}[Участии в проекте] для получения более полной информации.
 
-Даже если Вы не программист, есть другие способы помочь FreeBSD в развитии. The http://www.FreeBSDFoundation.org[FreeBSD Foundation] - это некоммерческая организация, для которой все пожертвования и денежная помощь не облагаются налогами. Для получения более полной информации пишите на адрес board@FreeBSDFoundation.org или: The FreeBSD Foundation, P.O. Box 20247, Boulder, CO 80303, USA.
+Даже если Вы не программист, есть другие способы помочь FreeBSD. https://www.freebsdfoundation.org[Фонд FreeBSD] является некоммерческой организацией, прямая помощь в адрес которой может быть полностью вычтена из налогооблагаемой базы. Для получения более полной информации, пожалуйста, посетите эту link:https://freebsdfoundation.org/about-us/contact-us/[страницу].
