--- a/website/content/en/status/report-2025-07-2025-09/drm-drivers-slowdowns_fixes.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/drm-drivers-slowdowns_fixes.adoc
@@ -29,7 +29,7 @@ Unfortunately, `kvzalloc()`, which relied on `kmalloc()` in our implementation (
 
 Some rough profiling of slowdowns was done using `dtrace`.
 It revealed that a fair amount of execution time of the failing allocations came from attempting multiple allocation on the same NUMA domain, and that of succeeding ones came from useless changes to page attributes, triggering expensive TLB shootdowns.
-An analysis of the VM domainset iterators code revealed multiple flaws, in particular leading to re-examining the same domain multiple times (up to 4 times for the common case of machines with a single domain) without any additional guarantees of success for new attemps.
+An analysis of the VM domainset iterators code revealed multiple flaws, in particular leading to re-examining the same domain multiple times (up to 4 times for the common case of machines with a single domain) without any additional guarantees of success for new attempts.
 Some other VM domainset problems have been fixed in the process, such as ensuring that allocation requests prefer domains not on a low memory condition in all situations.
 
 Finally, concerning specifically the amdgpu driver and affecting only Carrizo, Polaris and Vega M based AMD GPUs, a temporary allocation that was unnecessarily physically contiguous was replaced with a regular one, making the remaining, relatively short but noticeable freezes disappear.
