--- a/website/content/en/status/report-2025-07-2025-09/group-changes.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/group-changes.adoc
@@ -38,7 +38,7 @@ They are available if and only if the kernel was compiled with `COMPAT_FREEBSD14
 
 We have normally fixed all unwanted impacts of storing the effective group ID separately from the supplementary groups in the kernel, such as:
 
-* Some security policies or access checks would either ignore the effective group ID or the first supplementary group (with lowest numerical ID), affecting process visibility restrictions based on group IDs, the "can debug" and "can export KTLS keys" checks, the man:mac_do[4] and man:mac_bsdextended[4] security policies, and access crontrol to some hardware facilities (tracing: man:hwt[4]; performance monitoring: man:hwpmc[4]) and to NFS-served shares.
+* Some security policies or access checks would either ignore the effective group ID or the first supplementary group (with lowest numerical ID), affecting process visibility restrictions based on group IDs, the "can debug" and "can export KTLS keys" checks, the man:mac_do[4] and man:mac_bsdextended[4] security policies, and access control to some hardware facilities (tracing: man:hwt[4]; performance monitoring: man:hwpmc[4]) and to NFS-served shares.
 * Reporting of process' credentials would omit the effective group ID, affecting all variants of `procstat -s` (on live processes, core files, or system core dump), man:ddb[4].
 
 Sponsor: The FreeBSD Foundation
