--- a/website/content/en/status/report-2025-07-2025-09/valgrind.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/valgrind.adoc
@@ -32,7 +32,7 @@ Here is a list of bugfixes since my last report, Q1 2024.
 * Improvements to `setcontest` argument checking
 * Some more `aio_*` fixes
 * Syscall `_sysctlname` was checking the wrong length of the name argument
-* New syscall wrappers for `kcmp`, `getrlimitusage`, `close_range`, `fchroot`, `setcred`, `exterrctl`, `inotify_add_watch_at`, `inotify_rm_awtch`, `jail_attach_jd` and `jail_remove_jd`
+* New syscall wrappers for `kcmp`, `getrlimitusage`, `close_range`, `fchroot`, `setcred`, `exterrctl`, `inotify_add_watch_at`, `inotify_rm_watch`, `jail_attach_jd` and `jail_remove_jd`
 * Started adding better `ioctl` argument checking
 * Fixes to Valgrinds self-checking modes
 * Support aarch64 auxv AT_HWCAP, AT_CHERI_STATS, AT_HWCAP3 and AT_HWCAP4
